--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ configure_file(config.h.in config.h)
 
 set(PROJECT_SOURCES
     main.cpp
+    mruby++.cpp
 )
 
 add_executable(rq
@@ -9,4 +10,5 @@ add_executable(rq
 )
 
 target_link_libraries(rq PRIVATE
+  ${MRUBY_LIBS}
 )
