--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
         run: cmake --build --preset dev
 
       - name: Run tests
-        run: ruby test/rq_test.rb
+        run: ruby test/rj_test.rb
