--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Configure project
-        run: cmake --preset dev
+        run: cmake --preset dev -DCMAKE_OSX_ARCHITECTURES='arm64;x86_64'
 
       - name: Build project
         run: cmake --build --preset dev
+        env:
+          UNIVERSAL_BUILD: 1
 
       - name: Run tests
         run: ruby test/rj_test.rb
