--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,3 +1,10 @@
+/*
+    This file is part of rj
+
+    SPDX-FileCopyrightText: 2022 Georg Gadinger <nilsding@nilsding.org>
+    SPDX-License-Identifier: GPL-3.0-or-later
+*/
+
 #pragma once
 
 #cmakedefine PROJECT_VERSION "@PROJECT_VERSION@"
