--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,13 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          zypper in -y cmake gcc-c++ ruby git
+          zypper ar -f https://download.opensuse.org/repositories/devel:/languages:/crystal/openSUSE_Tumbleweed/devel:languages:crystal.repo
+          zypper --gpg-auto-import-keys in -y crystal ruby git gcc
 
       - uses: actions/checkout@v3
 
-      - name: Configure project
-        run: cmake --preset dev
-
       - name: Build project
-        run: cmake --build --preset dev
+        run: rake build
 
       - name: Run tests
         run: ruby test/rj_test.rb
@@ -31,17 +29,12 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          brew install cmake git
+          brew install crystal ruby git
 
       - uses: actions/checkout@v3
 
-      - name: Configure project
-        run: cmake --preset dev -DCMAKE_OSX_ARCHITECTURES='arm64;x86_64'
-
       - name: Build project
-        run: cmake --build --preset dev
-        env:
-          UNIVERSAL_BUILD: 1
+        run: rake build
 
       - name: Run tests
         run: ruby test/rj_test.rb
