--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,12 @@
 *.autosave
 *.a
 *.core
-*.moc
 *.o
 *.obj
 *.orig
 *.rej
 *.so
 *.so.*
-*_pch.h.cpp
-*_resource.rc
-*.qm
 .#*
 *.*#
 core
@@ -24,59 +20,22 @@ tags
 .directory
 *.debug
 Makefile*
-*.prl
 *.app
-moc_*.cpp
-ui_*.h
-qrc_*.cpp
 Thumbs.db
-*.res
-*.rc
-/.qmake.cache
-/.qmake.stash
-
-# qtcreator generated files
-*.pro.user*
-
-# xemacs temporary files
-*.flc
+*.dwarf
 
 # Vim temporary files
 .*.swp
-
-# Visual Studio generated files
-*.ib_pdb_index
-*.idb
-*.ilk
-*.pdb
-*.sln
-*.suo
-*.vcproj
-*vcproj.*.*.user
-*.ncb
-*.sdf
-*.opensdf
-*.vcxproj
-*vcxproj.*
-
-# MinGW generated files
-*.Debug
-*.Release
-
-# Python byte code
-*.pyc
 
 # Binaries
 # --------
 *.dll
 *.exe
+/bin
+/lib
 
 # other temporary files ...
 .cache
-CMakeLists.txt.user
-/build
-/build-release
-compile_commands.json
 *.kate-swp
 
 # RDoc output
@@ -86,3 +45,6 @@ compile_commands.json
 
 # MRuby version lockfile
 mruby_config.rb.lock
+
+# we check out mruby to /vendor/mruby
+/vendor/mruby
